# oop-2019

./: README.md
02_cmake/: CMakeLists.txt  dummy.cpp  dummy.h  main.cpp  test.cpp
02_tdd/: CMakeLists.txt
02_tdd/include/: TextWrapper.h
02_tdd/src/: TextWrapper.cpp
05_stl_benchmark/: readme.md
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
06_observer_pattern/: CMakeLists.txt
06_observer_pattern/include/: Acceleration.h  Displacement.h  Observable.h  Observer.h  Speed.h
06_observer_pattern/src/: Acceleration.cpp  Displacement.cpp  Observable.cpp  Speed.cpp
06_observer_pattern/test/: CMakeLists.txt
06_observer_pattern/uml/: diagram.puml
07_abstract_factory_pattern/: CMakeLists.txt
07_abstract_factory_pattern/include/: ButtonGnomeWidget.h  ButtonKdeWidget.h  Demo.h  (+8 more)
08_fake_mock_or_stub/: CMakeLists.txt
09_console/: acceleration.cpp  console.pro  main.cpp  speed.cpp  speed.h
09_simple_gui/: acceleration.cpp  acceleration.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple_gui.pro  speed.cpp  speed.h
10_state_machine/: mainwindow.cpp
11_qml/: 11_qml-1.pro  QtQuickDemo.pro  acceleration.cpp  acceleration.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
12_qt_testing/: 12_qt_testing.pro
13_client_server/: 13_client_server.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  socket.cpp  socket.h
QtQuickDemo/: acceleration.cpp  acceleration.h  demo.cpp  demo.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
(+39 files in other folders)
